# half_edge

./: .clang-format  CMakeLists.txt  TODO.md  Triangulation.cpp  Triangulation.hpp  helpers_test.hpp  main.cpp  model_io.cpp  model_io.hpp
.github/workflows/: codeql.yml  continuous-integration.yml
tests/: CMakeLists.txt  basic_test.cpp  model_io_test.cpp
